services/orders-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders-service
  ports:
    - port: 8081
      targetPort: 8081
